name:                 apns
version:              1.0.0
synopsis:             APNS protocol implementation.
stability:            experimental
license:              MPL-2.0
license-file:         LICENSE.txt
author:               Tiago Loureiro
maintainer:           Tiago Loureiro <tiago.loureiro@gmail.com>
copyright:            (C) 2014-2015 Tiago Loureiro
homepage:             https://github.com/tiago-loureiro/apns/
bug-reports:          https://github.com/tiago-loureiro/apns/issues
category:             Network, Cloud, Mobile
build-type:           Simple
cabal-version:        >= 1.10

description:
    Implementation of APNS's Protocol
    <https://developer.apple.com/library/ios/documentation/NetworkingInternet/Conceptual/RemoteNotificationsPG/Chapters/ApplePushService.html>
    and
    <https://developer.apple.com/library/ios/documentation/NetworkingInternet/Conceptual/RemoteNotificationsPG/Chapters/CommunicatingWIthAPS.html#//apple_ref/doc/uid/TP40008194-CH101-SW4>.
    .

source-repository head
    type:             git
    location:         git@github.com:tiago-loureiro/apns.git

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs -funbox-strict-fields

    exposed-modules:
        Network.APNS.Protocol

    other-modules:
        Network.APNS.Protocol.Types

    build-depends:
          base              >= 4.5
        , aeson
        , base16-bytestring
        , bytestring        >= 0.10
        , cereal
        , containers
        , network           >= 2.4
        , text              >= 0.11
        , template-haskell
        , time              >= 1.4
        , unordered-containers
